kubernetes/default/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - name: grpc
      port: 4000
      targetPort: 9090
    - name: http
      port: 4001
      targetPort: 8080
