kubernetes/default/echo/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo
spec:
  gateways:
    - gateway.istio-system.svc.cluster.local
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /echo/
      rewrite:
        uri: /
      route:
        - destination:
            host: echo
            port:
              number: 4001
